unpackaged/main/default/objects/Contact_Drug__c/Contact_Drug__c.object-meta.xml
<CustomObject>
    <label>Contact Drug</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Contact Drug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>