unpackaged/main/default/objects/Contact_Drug__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <formula>Contact__r.Alternative_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Phone</label>
    <type>Text</type>
</CustomField>