unpackaged/main/default/objects/Contact_Drug__c/fields/Authorization_Received__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Received__c</fullName>
    <formula>Contact__r.Authorization_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorization Received</label>
    <type>Checkbox</type>
</CustomField>