unpackaged/main/default/objects/Contact_Drug__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>Contact__r.Patient_Birth_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>