unpackaged/main/default/objects/Contact_Drug__c/fields/Claim_Information__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Information</label>
    <referenceTo>Claim_Information__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>