unpackaged/main/default/objects/Contact_Drug__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>