unpackaged/main/default/objects/Contact_Drug__c/fields/Copay_Card_amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_amount_Paid__c</fullName>
    <formula>Related_Case__r.Copay_Card_amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copay Card amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>