unpackaged/main/default/objects/Contact_Drug__c/fields/Copay_Card_Monthly_Max__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_Monthly_Max__c</fullName>
    <formula>Drug_Name__r.Annual_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copay Card Monthly Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>