unpackaged/main/default/objects/Contact_Drug__c/fields/Copay_Card_Yearly_Max__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_Yearly_Max__c</fullName>
    <label>Copay Card Yearly Max</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>