unpackaged/main/default/objects/Contact_Drug__c/fields/Copay_Category__c.field-meta.xml
<CustomField>
    <fullName>Copay_Category__c</fullName>
    <inlineHelpText>The values are a place holder for now until more info is received.</inlineHelpText>
    <label>Copay Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>