unpackaged/main/default/objects/Contact_Drug__c/fields/Copay_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Copay_Enrollment_Status__c</fullName>
    <label>CPA Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not on File</fullName>
                <default>true</default>
                <label>Not on File</label>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On File</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>