unpackaged/main/default/objects/Contact_Drug__c/fields/CPA_Available__c.field-meta.xml
<CustomField>
    <fullName>CPA_Available__c</fullName>
    <formula>TEXT( Drug_Name__r.Copay_Assistance_Available__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPA Available</label>
    <type>Text</type>
</CustomField>