unpackaged/main/default/objects/Contact_Drug__c/fields/CPA_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>CPA_Enrollment_Date__c</fullName>
    <label>CPA Enrollment Date</label>
    <type>Date</type>
</CustomField>