unpackaged/main/default/objects/Contact_Drug__c/fields/CPA_Enrollment_Form_s__c.field-meta.xml
<CustomField>
    <fullName>CPA_Enrollment_Form_s__c</fullName>
    <label>CPA Enrollment Form(s)</label>
    <type>Url</type>
</CustomField>