unpackaged/main/default/objects/Contact_Drug__c/fields/CPA_Funds_Remaining__c.field-meta.xml
<CustomField>
    <fullName>CPA_Funds_Remaining__c</fullName>
    <formula>Related_Case__r.Copay_card_amount_left__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPA Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>