unpackaged/main/default/objects/Contact_Drug__c/fields/CPA_ID__c.field-meta.xml
<CustomField>
    <fullName>CPA_ID__c</fullName>
    <label>CPA ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>