unpackaged/main/default/objects/Contact_Drug__c/fields/Daily_Claim__c.field-meta.xml
<CustomField>
    <fullName>Daily_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Daily Claim</description>
    <label>Daily Claim</label>
    <referenceTo>Daily_Claim__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>