unpackaged/main/default/objects/Contact_Drug__c/fields/Date_CPA_Funds_Exhausted__c.field-meta.xml
<CustomField>
    <fullName>Date_CPA_Funds_Exhausted__c</fullName>
    <label>Date CPA Funds Exhausted</label>
    <type>Date</type>
</CustomField>