unpackaged/main/default/objects/Contact_Drug__c/fields/Debit_Card_Info__c.field-meta.xml
<CustomField>
    <fullName>Debit_Card_Info__c</fullName>
    <label>Debit Card Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>