unpackaged/main/default/objects/Contact_Drug__c/fields/Debit_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Debit_Exp_Date__c</fullName>
    <label>Debit Exp. Date</label>
    <type>Date</type>
</CustomField>