unpackaged/main/default/objects/Contact_Drug__c/fields/Drug_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Brand_Name__c</fullName>
    <description>Drug Brand Name</description>
    <formula>Drug_Name__r.Drug_Brand_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Brand Name</label>
    <type>Text</type>
</CustomField>