unpackaged/main/default/objects/Contact_Drug__c/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drug Name</label>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>