unpackaged/main/default/objects/Contact_Drug__c/fields/GPI_14__c.field-meta.xml
<CustomField>
    <fullName>GPI_14__c</fullName>
    <formula>Drug_Name__r.GPI_14__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPI 14</label>
    <type>Text</type>
</CustomField>