unpackaged/main/default/objects/Contact_Drug__c/fields/HCPCS_Code__c.field-meta.xml
<CustomField>
    <fullName>HCPCS_Code__c</fullName>
    <formula>Drug_Name__r.J_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCPCS Code</label>
    <type>Text</type>
</CustomField>