unpackaged/main/default/objects/Contact_Drug__c/fields/Historical_Claim__c.field-meta.xml
<CustomField>
    <fullName>Historical_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Historical Claim</description>
    <label>Historical Claim</label>
    <referenceTo>Historical_Claim__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>