unpackaged/main/default/objects/Contact_Drug__c/fields/Historical_Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Historical_Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historical Prior Auth</label>
    <referenceTo>Historical_Prior_Auth__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>