unpackaged/main/default/objects/Contact_Drug__c/fields/ICD_10_CM__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_CM__c</fullName>
    <formula>Drug_Name__r.ICD_10_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICD-10 CM</label>
    <type>Text</type>
</CustomField>