unpackaged/main/default/objects/Contact_Drug__c/fields/J_Code__c.field-meta.xml
<CustomField>
    <fullName>J_Code__c</fullName>
    <formula>Drug_Name__r.J_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>J - Code</label>
    <type>Text</type>
</CustomField>