unpackaged/main/default/objects/Contact_Drug__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>