unpackaged/main/default/objects/Contact_Drug__c/fields/Member_Educated__c.field-meta.xml
<CustomField>
    <fullName>Member_Educated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF UI: Create Checkbox on the Contact Drug Object to display whether member is educated for PrudentMed</description>
    <label>Member Educated</label>
    <type>Checkbox</type>
</CustomField>