unpackaged/main/default/objects/Contact_Drug__c/fields/Member_Ineligible_for_CPA__c.field-meta.xml
<CustomField>
    <fullName>Member_Ineligible_for_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Ineligible for CPA</label>
    <type>Checkbox</type>
</CustomField>