unpackaged/main/default/objects/Contact_Drug__c/fields/Member_Min_per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Member_Min_per_Claim__c</fullName>
    <formula>Drug_Name__r.Member_Minimum_Per_Claim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Min. per Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>