unpackaged/main/default/objects/Contact_Drug__c/fields/No_longer_taking_med__c.field-meta.xml
<CustomField>
    <fullName>No_longer_taking_med__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No longer taking med</label>
    <type>Checkbox</type>
</CustomField>