unpackaged/main/default/objects/Contact_Drug__c/fields/Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Auth</label>
    <referenceTo>Prior_Auth__c</referenceTo>
    <relationshipLabel>Contact Drugs</relationshipLabel>
    <relationshipName>Contact_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>