unpackaged/main/default/objects/Contact_Drug__c/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <formula>Drug_Name__r.Pronunciation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pronunciation</label>
    <type>Text</type>
</CustomField>