unpackaged/main/default/objects/Contact_Drug__c/fields/Provider_Notes__c.field-meta.xml
<CustomField>
    <fullName>Provider_Notes__c</fullName>
    <inlineHelpText>Helpful notes on the provider&#39;s office to be used by PRx Call Center. Can include details such as the best point of contact at the office, lunch hours, etc.</inlineHelpText>
    <label>Provider Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>