unpackaged/main/default/objects/Contact_Drug__c/fields/PRx_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>PRx_Program_Description__c</fullName>
    <formula>TEXT(Drug_Name__r.PRx_Program_Description__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRx Program Description</label>
    <type>Text</type>
</CustomField>