unpackaged/main/default/objects/Contact_Drug__c/fields/PRx_Website__c.field-meta.xml
<CustomField>
    <fullName>PRx_Website__c</fullName>
    <formula>Drug_Name__r.PRx_Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRx Website</label>
    <type>Text</type>
</CustomField>