unpackaged/main/default/objects/Contact_Drug__c/fields/Therapy_Class__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Class__c</fullName>
    <formula>Drug_Name__r.Therapy_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Therapy Class</label>
    <type>Text</type>
</CustomField>