unpackaged/main/default/objects/Contact_Drug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Related_Case__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Drug_Name__c</columns>
    <columns>Copay_Enrollment_Status__c</columns>
    <columns>CPA_ID__c</columns>
    <columns>Claim_Information__c</columns>
    <columns>Daily_Claim__c</columns>
    <columns>Historical_Claim__c</columns>
    <columns>Historical_Prior_Auth__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>No_longer_taking_med__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>