unpackaged/main/default/objects/Contact_Drug__c/listViews/POST_Go_Live_Enrollment_Follow_Up_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>POST_Go_Live_Enrollment_Follow_Up_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>POST-Go-Live Enrollment Follow-Up</label>
    <queue>POST_Go_Live_Enrollment_Follow_Up</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>