unpackaged/main/default/objects/Contact_Drug__c/listViews/POST_Go_Live_Fax_Validation_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>POST_Go_Live_Fax_Validation_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>POST Go Live Fax Validation</label>
    <queue>POST_Go_Live_Fax_Validation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>