unpackaged/main/default/objects/Contact_Drug__c/listViews/POST_Go_Live_New_Enrollment_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>POST_Go_Live_New_Enrollment_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>POST-Go-Live New Enrollment</label>
    <queue>POST_Go_Live_New_Enrollment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>