unpackaged/main/default/objects/Contact_Drug__c/listViews/Post_Go_Live_Reimbursement_Follow_Up_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>Post_Go_Live_Reimbursement_Follow_Up_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>Post-Go-Live Reimbursement - Follow-Up</label>
    <queue>Post_Go_Live_Reimbursement_Follow_Up</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>