unpackaged/main/default/objects/Contact_Drug__c/listViews/Post_Go_Live_Reimbursement_NEW_Queue_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>Post_Go_Live_Reimbursement_NEW_Queue_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>Post-Go-Live New Reimbursement</label>
    <queue>Post_Go_Live_New_Reimbursement</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>