unpackaged/main/default/objects/Contact_Drug__c/listViews/PRE_Go_Live_Enrollment_Follow_Up_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>PRE_Go_Live_Enrollment_Follow_Up_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>PRE-Go-Live  Enrollment Follow-Up</label>
    <queue>PRE_Go_Live_Enrollment_Follow_Up</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>