unpackaged/main/default/objects/Contact_Drug__c/listViews/Pre_Go_Live_Fax_Validation_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>Pre_Go_Live_Fax_Validation_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>Pre-Go-Live Fax Validation</label>
    <queue>Pre_Go_Live_Fax_Validation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>