unpackaged/main/default/objects/Contact_Drug__c/listViews/PRE_Go_Live_New_Enrollment_Contact_Drug.listView-meta.xml
<ListView>
    <fullName>PRE_Go_Live_New_Enrollment_Contact_Drug</fullName>
    <filterScope>Queue</filterScope>
    <label>PRE-Go-Live New Enrollment</label>
    <queue>PRE_Go_Live_New_Enrollment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>